kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokvi0nio
spec:
  type: ClusterIP 
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: gokv
